# discord_bots

./: .dockerignore  .editorconfig  .env.example  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  build.rs  config.toml.example  docker-compose.yml.example  native.docker-compose.yml.example
.github/: dependabot.yml
.github/action-assets/: multi-platform.dockerfile
.github/workflows/: docker-publish.yml  release.yml  rolling-release.yml
src/: common.rs  config.rs  kaenguru.rs  logger_init.rs  main.rs  replies.rs  xd.rs
src/kaenguru/: euro_to_mark.rs
src/logger/: mod.rs
src/logger/custom/: filter.rs  mod.rs  trigger.rs
src/xd/: replies.rs
