[package]
name = "xd_bot"
version = "0.3.0"
authors = ["MaFeLP <mafelp@protonmail.ch>"]
edition = "2021"
description = "A small collection of non-useful commenting bots"
readme = "README.md"
homepage = "https://mafelp.github.io/xd_bot/"
repository = "https://github.com/MaFeLP/xd_bot/"
license = "GPLv3"
keywords = ["discord", "bot", "serenity"]
categories = ["discord"]
exclude = [".env", "config.toml", "log4rs.yml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16", features = ["macros", "rt-multi-thread"] }
ctrlc = "3.4"
regex = "1.8"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.5"
log = "0.4.18"
log4rs = { version = "1.2.0", features = ["gzip", "rolling_file_appender", "fixed_window_roller", "yaml_format"] }
anyhow = "1.0.71"
once_cell = "1.18.0"

[dependencies.serenity]
default-features = false
features = ["client", "gateway", "rustls_backend", "model", "cache"]
version = "0.11"
