[package]
name = "xd_bot"
version = "0.3.1"
authors = ["MaFeLP <mafelp@protonmail.ch>"]
edition = "2021"
description = "A small collection of non-useful commenting bots"
readme = "README.md"
homepage = "https://mafelp.github.io/xd_bot/"
repository = "https://github.com/MaFeLP/xd_bot/"
license = "GPLv3"
keywords = ["discord", "bot", "serenity"]
categories = ["discord"]
exclude = [".env", "config.toml", "log4rs.yml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35", features = ["macros", "rt-multi-thread"] }
ctrlc = "3.4"
regex = "1.10"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
log = "0.4"
log4rs = { version = "1.2.0", features = ["gzip", "rolling_file_appender", "fixed_window_roller", "yaml_format"] }
anyhow = "1.0"
once_cell = "1.19"

[dependencies.serenity]
default-features = false
features = ["builder", "client", "gateway", "rustls_backend", "model", "cache"]
version = "0.12"
